--- a/render.yaml
+++ b/render.yaml
@@ -6,6 +6,8 @@ services:
     buildCommand: pip install -r requirements.txt && python -m spacy download en_core_web_sm
     startCommand: python start_prod.py
     envVars:
+      - key: PYTHON_VERSION
+        value: 3.11.11
       - key: SECRET_KEY
         generateValue: true
       - key: LOG_LEVEL
